--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cool Webpage</title>
-    <link href=".resources/css/style.css" type="text/css" rel="stylesheet">
+    <title>Excursion</title>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <p>Hello!</p>
+      <h1>Discover hidden places in the world around you</h1>
+      <a href="#test">Download Excursion (Coming soon!)</a>
   </body>
 </html>
