--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <div class="content">
       <h1>Discover hidden places in the world around you</h1>
-      <a href="#test">Download Excursion (Coming soon!)</a>
+      <p><a class="link" href="#">Download Excursion (Coming soon!)</a></p>
+      <video autoplay loop="">
+        <source src="./resources/videos/excursion.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      <h2>Your personal travel guide</h2>
+      <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+      <p><img src="./resources/images/camp.jpg"></p>
+      <p><img src="./resources/images/phone.png"></p>
+      <h2>Coming Soon for iPhone and Android</h2>
+      <p><a class="link" href="#">Download Excursion (Coming soon!)</a></p>
+    </div>
+    <div id="footer">
+      <h3>&copy; Excursion</h3>
+    </div>
   </body>
 </html>
